# vetgraph

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: greetings.yml  issue-assign.yml  publish.yml
docs/: model-names.md
examples/: multi_provider_usage.py  simple_provider_example.py
src/vetgraph/: __init__.py  core.py  providers.py  schema.py
tests/: README.md  __init__.py  conftest.py  test_core.py  test_core_refactored.py  test_schema.py  test_triples.py  test_version_alignment.py  test_visualize_save.py
vetgraph/: exceptions.py
