[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vetgraph"
version = "0.1.1"
description = "Transform unstructured text into NetworkX knowledge graphs using LLMs"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Vishesh Raju", email = "visheshinus@gmail.com"}
]
keywords = ["knowledge-graph", "nlp", "llm", "networkx", "graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "networkx>=3.0",
    "instructor>=1.0.0",
    "pydantic>=2.0.0",
    "matplotlib>=3.5.0",
    "pyvis>=0.3.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
gemini = ["google-genai>=0.2.0"]
ollama = ["openai>=1.0.0"]
all-providers = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-genai>=0.2.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/vetgraph"
Documentation = "https://github.com/yourusername/vetgraph#readme"
Repository = "https://github.com/yourusername/vetgraph"
Issues = "https://github.com/yourusername/vetgraph/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/vetgraph"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
