[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vetgraph"
version = "1.0.0"
description = "Transform unstructured text into NetworkX knowledge graphs using LLMs"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Vishesh Raju", email = "visheshinus@gmail.com"}
]
keywords = ["knowledge-graph", "nlp", "llm", "networkx", "graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "networkx>=3.0",
    "instructor>=1.0.0",
    "pydantic>=2.0.0",
    "matplotlib>=3.5.0",
    "pyvis>=0.3.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
gemini = ["google-genai>=0.2.0"]
ollama = ["openai>=1.0.0"]
all-providers = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-genai>=0.2.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "python-semantic-release>=9.8.0",
    "build>=1.2.0",
    "twine>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/Vishesh0-7/vetgraph"
Documentation = "https://github.com/Vishesh0-7/vetgraph#readme"
Repository = "https://github.com/Vishesh0-7/vetgraph"
Issues = "https://github.com/Vishesh0-7/vetgraph/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/vetgraph"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.semantic_release]
branch = "main"
tag_format = "v{version}"
changelog_file = "CHANGELOG.md"
commit_message = "chore(release): {version} [skip ci]"
commit_parser = "conventional"
major_on_zero = false
version_toml = [
    "pyproject.toml:project.version",
]
version_variables = [
    "src/vetgraph/__init__.py:__version__",
]
upload_to_pypi = false
upload_to_release = true

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "feat",
    "fix",
    "perf",
    "refactor",
    "docs",
    "style",
    "test",
    "chore",
    "ci",
    "build",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
examples = ["python-dotenv>=1.0"]
